# betting-odds-scraper

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build.yml  ci.yml  lint.yml
configs/sites/: betano.yaml  betclic.yaml  bwin.yaml
scripts/: print_tree.py  run_betano_once.py  run_betclic_once.py  run_betclick_once.py  run_bwin_once.py
src/betting_odds_scraper/: __init__.py  config.py  logger.py  models.py  validators.py
src/betting_odds_scraper/browser/: selenium_driver.py
src/betting_odds_scraper/cli/: app.py  common.py  legacy.py  registry.py  service.py
src/betting_odds_scraper/cli/commands/: scrape.py
src/betting_odds_scraper/pipelines/: scrape_betano.py  scrape_betclic.py  scrape_bwin.py  scrape_site.py
src/betting_odds_scraper/scrapers/: exceptions.py
src/betting_odds_scraper/scrapers/betano/: parser.py  scraper.py  selectors.py  url_builder.py
src/betting_odds_scraper/scrapers/betclic/: parser.py  scraper.py  selectors.py  url_builder.py
src/betting_odds_scraper/scrapers/bwin/: parser.py  scraper.py  selectors.py  url_builder.py
src/betting_odds_scraper/storage/: csv_writer.py  json_writer.py
tests/: test_betano_parser.py  test_betclic_parser.py  test_bwin_parser.py  test_scrape_site_pipeline.py  test_storage_writers.py  test_validators.py  test_validatos.py
