[project]
name = "betting-odds-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Rui Pereira", email = "ruiarpereira15@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0.3",
    "selenium>=4.41.0",
    "tzdata>=2025.3",
]

[project.scripts]
betting-odds-scraper = "betting_odds_scraper:main"

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"
