[project]
name = "betting-odds-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Rui Pereira", email = "ruiarpereira15@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0.3",
    "selenium>=4.41.0",
    "typer>=0.24.1",
    "tzdata>=2025.3",
]

[project.scripts]
odds = "betting_odds_scraper.cli.app:main"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build]
dev-mode-dirs = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/betting_odds_scraper"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.6",
]